<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/walmartLogo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/walmart_logo" />

    <TextView
        android:id="@+id/signInTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_your_account"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="32dp">

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_address_required" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/password_required" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:ems="10"
                android:inputType="textPassword"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:clickable="true"
                android:focusable="true"
                android:linksClickable="true"
                android:minHeight="48dp"
                android:text="@string/forgot_password"
                android:textAlignment="textEnd"
                android:textColorLink="#3F51B5" />

            <Button
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="@string/sign_in"
                android:textAllCaps="false" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                >
                <TextView
                    android:id="@+id/dontHaveAccountLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/don_t_have_account"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.2dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_toStartOf="@id/dontHaveAccountLabel"
                    android:background="#FFC8C8C8"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.2dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_toEndOf="@id/dontHaveAccountLabel"
                    android:background="#FFC8C8C8"
                    />
            </RelativeLayout>

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/create_a_new_account"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/purple_500" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>